--- a/VersaoiOS/WhatsApp Clone/Podfile
+++ b/VersaoiOS/WhatsApp Clone/Podfile
@@ -10,5 +10,6 @@ target 'WhatsApp Clone' do
     pod 'Firebase/Database'
     pod 'Firebase/Auth'
     pod 'Firebase/Storage'
+    pod 'SDWebImage'
 
 end
